added Swagger JSDoc
